...
                    border: Border.all(color: Colors.grey),
                    borderRadius: BorderRadius.circular(4),
                  ),
                  child: FittedBox(
                    fit: BoxFit.scaleDown,
                    child: Text(
                      key : const Key('result_text'),
                      _result.isEmpty ? "0" : _result,
                      style: const TextStyle(
                        fontSize: 18,
                        fontWeight: FontWeight.bold,
                        color: Colors.blue,
                      ),
...
      ],
    );

    return Scaffold(
      appBar: AppBar(
        title: const Text(
          key: const Key('Calculator'),
          'เครื่องคิดเลขแบบง่าย',
          style: TextStyle(fontSize: 18),
        ),
        leadingWidth: 100,
        leading: TextButton(
          onPressed: () {
...
